Fix webNavigation extension API to properly fire onCommit event.

When classifying navigations, the webNavigation API incorrectly uses
only the URL difference to check whether a navigation is fragment one
or not. This creates a problem when real navigations occur that differ
only in the fragment.
The fix is to ensure that only same-document navigations are considered
as fragment ones.

Bug: 732083
Change-Id: If3a6753e1a78169e031d330f742dae298c098ae1
Reviewed-on: https://chromium-review.googlesource.com/588027
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: Nasko Oskov <nasko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490040}