chrome/test/data/extensions/api_test/webnavigation/referenceFragment/b.js
@@ -1,0 +1,21 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2017 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+document.getElementById('btn').addEventListener('click', function() {
+  location.assign(location.href);
+});
+
+onload = function() {
+  // Set a sentinel value in sessionStorage to avoid clicking the button on
+  // the second load of the document. Otherwise a second click will dispatch
+  // another fragment navigation, which the test would not expect.
+  if (sessionStorage['foo'])
+    return;
+  sessionStorage['foo'] = true;
+
+  setTimeout(function() {
+    document.getElementById('btn').click();
+  }, 0);
+}
