chrome/test/data/extensions/api_test/webnavigation/referenceFragment/test_referenceFragment.js
@@ -50,9 +50,96 @@ onload = function() {
                        timeStamp: 0,
                        transitionQualifiers: ["client_redirect"],
                        transitionType: "link",
-                       url: getURL('a.html#anchor') }}],
-          [ navigationOrder("a-") ]);
+                       url: getURL('a.html#anchor') }}
+        ],
+        [ navigationOrder("a-") ]);
+
         chrome.tabs.update(tabId, { url: getURL('a.html') });
+      },
+
+      // This is a test case in which a fragment navigation as a result of a
+      // click is followed by a load of the original URL. The load of the
+      // original URL has the potential to be confused for a fragment
+      // navigation, since they differ only in the fragment.
+      // See https://crbug.com/732083.
+      function locationAssignAfterFragment() {
+        expect([
+          { label: "b-onBeforeNavigate",
+            event: "onBeforeNavigate",
+            details: { frameId: 0,
+                       parentFrameId: -1,
+                       processId: -1,
+                       tabId: 0,
+                       timeStamp: 0,
+                       url: getURL('b.html') }},
+          { label: "b-onCommitted",
+            event: "onCommitted",
+            details: { frameId: 0,
+                       processId: 0,
+                       tabId: 0,
+                       timeStamp: 0,
+                       transitionQualifiers: [],
+                       transitionType: "link",
+                       url: getURL('b.html') }},
+          { label: "b-onDOMContentLoaded",
+            event: "onDOMContentLoaded",
+            details: { frameId: 0,
+                       processId: 0,
+                       tabId: 0,
+                       timeStamp: 0,
+                       url: getURL('b.html') }},
+          { label: "b-onCompleted",
+            event: "onCompleted",
+            details: { frameId: 0,
+                       processId: 0,
+                       tabId: 0,
+                       timeStamp: 0,
+                       url: getURL('b.html') }},
+          { label: "b-onReferenceFragmentUpdated",
+            event: "onReferenceFragmentUpdated",
+            details: { frameId: 0,
+                       processId: 0,
+                       tabId: 0,
+                       timeStamp: 0,
+                       transitionQualifiers: [],
+                       transitionType: "link",
+                       url: getURL('b.html#') }},
+          { label: "b1-onBeforeNavigate",
+            event: "onBeforeNavigate",
+            details: { frameId: 0,
+                       parentFrameId: -1,
+                       processId: -1,
+                       tabId: 0,
+                       timeStamp: 0,
+                       url: getURL('b.html') }},
+          { label: "b1-onCommitted",
+            event: "onCommitted",
+            details: { frameId: 0,
+                       processId: 0,
+                       tabId: 0,
+                       timeStamp: 0,
+                       transitionQualifiers: ["client_redirect"],
+                       transitionType: "link",
+                       url: getURL('b.html') }},
+          { label: "b1-onDOMContentLoaded",
+            event: "onDOMContentLoaded",
+            details: { frameId: 0,
+                       processId: 0,
+                       tabId: 0,
+                       timeStamp: 0,
+                       url: getURL('b.html') }},
+          { label: "b1-onCompleted",
+            event: "onCompleted",
+            details: { frameId: 0,
+                       processId: 0,
+                       tabId: 0,
+                       timeStamp: 0,
+                       url: getURL('b.html') }},
+
+        ],
+        [ navigationOrder("b-"), navigationOrder("b1-") ]);
+
+        chrome.tabs.update(tabId, { url: getURL('b.html') });
       },
     ]);
   });
